--- a/src/vue/AffichageNouvellePartie.fxml
+++ b/src/vue/AffichageNouvellePartie.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.*?>
 <?import javafx.scene.text.*?>
 <?import javafx.scene.shape.*?>
 <?import javafx.geometry.*?>
@@ -18,7 +19,7 @@
                <font>
                   <Font name="Comic Sans MS" size="20.0" />
                </font></Button>
-            <Button mnemonicParsing="false" style="-fx-background-color: #823737;" text="Quitter" textFill="#fffffe">
+            <Button mnemonicParsing="false" style="-fx-background-color: #666060;" text="Quitter">
                <VBox.margin>
                   <Insets left="85.0" />
                </VBox.margin>
@@ -31,15 +32,26 @@
    <right>
       <VBox alignment="TOP_RIGHT" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
-            <MenuButton mnemonicParsing="false" style="-fx-background-color: #823737;" text="Options" textFill="#fffffe">
-              <items>
-                <MenuItem mnemonicParsing="false" text="Action 1" />
-                <MenuItem mnemonicParsing="false" text="Action 2" />
-              </items>
+            <VBox alignment="CENTER" prefHeight="101.0" prefWidth="50.0" spacing="20.0" style="-fx-background-color: #823737;">
+               <children>
+                  <ImageView fitHeight="30.0" fitWidth="30.0">
+                     <image>
+                        <Image url="@../../gear-1119298_640.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="30.0" fitWidth="30.0">
+                     <image>
+                        <Image url="@../../livre.png" />
+                     </image>
+                  </ImageView>
+               </children>
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
                <VBox.margin>
-                  <Insets right="10.0" top="10.0" />
+                  <Insets left="50.0" />
                </VBox.margin>
-            </MenuButton>
+            </VBox>
          </children>
       </VBox>
    </right>
