--- a/src/vue/AffichageNouvellePartie.fxml
+++ b/src/vue/AffichageNouvellePartie.fxml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.image.*?>
-<?import javafx.scene.text.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #BA976D;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #BA976D;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <center>
       <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="20.0" BorderPane.alignment="CENTER">
          <children>
@@ -19,7 +19,7 @@
                <font>
                   <Font name="Comic Sans MS" size="20.0" />
                </font></Button>
-            <Button mnemonicParsing="false" style="-fx-background-color: #666060;" text="Quitter">
+            <Button mnemonicParsing="false" style="-fx-background-color: #666060;" text="Quitter" textFill="WHITE">
                <VBox.margin>
                   <Insets left="85.0" />
                </VBox.margin>
@@ -32,8 +32,13 @@
    <right>
       <VBox alignment="TOP_RIGHT" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
-            <VBox alignment="CENTER" prefHeight="101.0" prefWidth="50.0" spacing="20.0" style="-fx-background-color: #823737;">
+            <VBox alignment="CENTER" prefHeight="103.0" prefWidth="35.0" spacing="20.0" style="-fx-background-color: #823737;">
                <children>
+                  <Button mnemonicParsing="false" prefHeight="0.0" prefWidth="0.0" style="-fx-background-color: #823737;" text="X">
+                     <VBox.margin>
+                        <Insets left="20.0" />
+                     </VBox.margin>
+                  </Button>
                   <ImageView fitHeight="30.0" fitWidth="30.0">
                      <image>
                         <Image url="@../../gear-1119298_640.png" />
