--- a/src/vue/AffichagePrincipal.fxml
+++ b/src/vue/AffichagePrincipal.fxml
@@ -11,9 +11,9 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="vue.ControleurPrincipal">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="vue.ControleurPrincipal">
    <children>
-      <HBox prefHeight="64.0" prefWidth="600.0" style="-fx-background-color: #3ABBCA;">
+      <HBox prefHeight="64.0" prefWidth="800.0" style="-fx-background-color: #3ABBCA;">
          <children>
             <ImageView fitHeight="64.0" fitWidth="69.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -22,7 +22,7 @@
             </ImageView>
          </children>
       </HBox>
-      <HBox prefHeight="54.0" prefWidth="600.0" style="-fx-background-color: F8DEBC;">
+      <HBox prefHeight="54.0" prefWidth="800.0" style="-fx-background-color: F8DEBC;">
          <children>
             <ImageView fx:id="engrenage" fitHeight="53.0" fitWidth="50.0" onMouseClicked="#actionParametres" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -34,33 +34,34 @@
                   <Image url="@images/Menu%20Button.png" />
                </image>
                <HBox.margin>
-                  <Insets left="500.0" />
+                  <Insets left="650.0" />
                </HBox.margin>
             </ImageView>
          </children>
       </HBox>
-      <HBox prefHeight="60.0" prefWidth="600.0">
+      <HBox prefHeight="60.0" prefWidth="800.0">
          <children>
             <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@images/Titre.png" />
                </image>
                <HBox.margin>
-                  <Insets left="210.0" />
+                  <Insets left="300.0" />
                </HBox.margin>
             </ImageView>
-         </children></HBox>
-      <HBox prefHeight="131.0" prefWidth="600.0">
+         </children>
+      </HBox>
+      <HBox prefHeight="131.0" prefWidth="800.0">
          <children>
             <ImageView fitHeight="128.0" fitWidth="146.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@images/damier.png" />
                </image>
                <HBox.margin>
-                  <Insets left="110.0" />
+                  <Insets left="210.0" />
                </HBox.margin>
             </ImageView>
-            <ImageView fitHeight="88.0" fitWidth="87.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="play" fitHeight="88.0" fitWidth="87.0" onMouseClicked="#actionPlay" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@images/play.png" />
                </image>
@@ -76,17 +77,19 @@
                   <Insets top="35.0" />
                </HBox.margin>
             </ImageView>
-         </children></HBox>
-      <HBox prefHeight="100.0" prefWidth="200.0">
+         </children>
+      </HBox>
+      <HBox prefHeight="100.0" prefWidth="800.0">
          <children>
-            <Button mnemonicParsing="false" prefHeight="42.0" prefWidth="140.0" style="-fx-background-color: #6D4F59;" text="Quitter">
+            <Button mnemonicParsing="false" onAction="#buttonQuitter" prefHeight="42.0" prefWidth="140.0" style="-fx-background-color: #6D4F59;" text="Quitter">
                <font>
                   <Font name="Comic Sans MS" size="20.0" />
                </font>
                <HBox.margin>
-                  <Insets left="235.0" top="25.0" />
+                  <Insets left="330.0" top="25.0" />
                </HBox.margin>
             </Button>
-         </children></HBox>
+         </children>
+      </HBox>
    </children>
 </VBox>
